--- a/css/util.css
+++ b/css/util.css
@@ -1,7 +1,6 @@
 /* Utilities */
 .container {
 	max-width: 1200px;
-	height: 100%;
 	margin: 0 auto;
 }
 
